
2025-07-24  Zhengyi Fu  <i@fuzy.me>

	Update gptel configuration

	* site-lisp/gptel-config.el (+gptel-auto-scroll-safe): Set
	`scroll-preserve-screen-position' locally to t.
	* init.el: Bind "C-j" to `gptel-send' in `gptel-mode-map'.
	Bind "C-j" to `gptel-aibo-send' in `gptel-aibo-mode-map'.
	Removed `olivetti-mode' from `gptel-mode-hook'.
	(toggle-map): Bind "C" to `olivetti-mode'.

2025-07-22  Zhengyi Fu  <i@fuzy.me>

	Replace term-keys with kkp

	* init.el:
	* packages.el


2025-07-22  Zhengyi Fu  <i@fuzy.me>

	Add history to `elfeed-search-live-filter'

	* init.el (+elfeed-search-live-filter-with-history): New command.
	(+elfeed-search-live-filter-history): New variable.

2025-07-22  Zhengyi Fu  <i@fuzy.me>

	* init.el: Change mode of tramp-compat-temporary-file-directory to
	700.

2025-07-20  Zhengyi Fu  <i@fuzy.me>

	* init.el (elfeed-db): Fix the file watcher callback.

2025-07-20  Zhengyi Fu  <i@fuzy.me>

	* init.el: Blackout `clipetty'.

2025-07-17  Zhengyi Fu  <i@fuzy.me>

	Update gptel-config.el

	* site-lisp/gptel-config.el (gptel-read-documentation): Rename to
	`+gptel-read-documentation'.
	(+gptel-shellcheck-fix): Fix the prompt to make sure `edit_file'
	tool is used.
	; * site-lisp/gptel-config.el: Update docstring.

2025-07-17  Zhengyi Fu  <i@fuzy.me>

	* transient/values.el (gptel-menu): Remove default value.

2025-07-17  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/gptel-config.el: Update description of tools.

2025-07-17  Zhengyi Fu  <i@fuzy.me>

	* init.el (+sh-mode-h): New function.  Add to `sh-mode-hook'.
	(hack-local-variables-hook): Fix typo.

2025-07-16  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/tencent-cos.el: Rename tencent-cloud to
	tencent-cos.el.

2025-07-15  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/tencent-cloud.el: New file.  Add support for Tencent
	Cloud Object Storage.

2025-07-15  Zhengyi Fu  <i@fuzy.me>

	* init.el: Refactor and update comments.
	* packages.el: Remove gptel-quick.

2025-07-15  Zhengyi Fu  <i@fuzy.me>
